--- a/react_native_bridged/23.02.md
+++ b/react_native_bridged/23.02.md
@@ -1,6 +1,6 @@
 <p>
   This document will guide you through the process of Countly SDK installation
-  and it applies to version 23.8.X<br>
+  and it applies to version 23.02.X<br>
   Countly is an open source SDK, you can take a look at our SDK code in the
   <a href="https://github.com/Countly/countly-sdk-react-native-bridge" target="_self">Github repo</a>
 </p>
@@ -23,7 +23,7 @@
   You can take a look at our example application in
   <a href="https://github.com/Countly/countly-sdk-rnb-example.git" target="_blank" rel="noopener">this Github repo</a>.
   It shows, how the majority of the SDK functionality can be used. After you have
-  cloned the repo, run the following commands from the root folder:
+  cloned the repo, then run the following commands from the root folder:
 </p>
 <pre><code class="shell">npm install                         # Install dependencies
 cd ios                              # Move to ios directory
@@ -38,14 +38,11 @@ react-native run-ios                # Run the iOS project</code></pre>
 </p>
 <pre># Include the Countly Class in the file that you want to use.
 npm install --save https://github.com/Countly/countly-sdk-react-native-bridge.git
-
-# OR
-
+# OR 
 npm install --save countly-sdk-react-native-bridge@latest
 
 # Linking the library to your app
-
-cd ios
+cd ios 
 pod install
 cd ..</pre>
 <h1 id="h_01HAVQNJQQBPYNQ7D6ACZTPEMM">SDK Integration</h1>
@@ -58,7 +55,7 @@ cd ..</pre>
   <code class="JavaScript">componentDidMount</code>method may be a good place.
 </p>
 <pre><code class="javascript">import Countly from 'countly-sdk-react-native-bridge';
-import CountlyConfig from 'countly-sdk-react-native-bridge/CountlyConfig';
+import Countly from 'countly-sdk-react-native-bridge/CountlyConfig';
 
 if(!await Countly.isInitialized()) {<br>  // create Countly config object
   const countlyConfig = new CountlyConfig("https://try.count.ly", "YOUR_APP_KEY");
@@ -67,41 +64,58 @@ if(!await Countly.isInitialized()) {<br>  // create Countly config object
 }</code></pre>
 <p>
   Please check
-  <a href="https://support.count.ly/hc/en-us/articles/900000908046-Getting-started-with-SDKs#h_01HABSX9KX44C9SF48WRPQNCP3" target="_blank" rel="noopener noreferrer">here</a>
+  <a href="https://support.count.ly/hc/en-us/articles/900000908046-Getting-started-with-SDKs#acquiring-your-application-key-and-server-url">here</a>
   for more information on how to acquire your application key (APP_KEY) and server
   URL.
 </p>
 <p>
-  After <code class="JavaScript">initWithConfig</code> has been called once, you
-  may use the commands in the rest of this document to send additional data and
-  metrics to your server.
+  After <code class="JavaScript">initWithConfig</code> and
+  <code class="JavaScript">start</code> have been called once, you may use the
+  commands in the rest of this document to send additional data and metrics to
+  your server.
 </p>
 <div class="callout callout--info">
   <p>
     If you are in doubt about the correctness of your Countly SDK integration
     you can learn about the verification methods from
-    <a href="https://support.count.ly/hc/en-us/articles/900000908046-Getting-started-with-SDKs#h_01HABSX9KXE6YKVETHDWPP8J3K" target="_blank" rel="noopener noreferrer">here</a>.
+    <a href="https://support.count.ly/hc/en-us/articles/900000908046-Getting-started-with-SDKs#how-to-validate-your-countly-integration" target="blank">here</a>.
   </p>
 </div>
-<h1 id="h_01HAVQNJQQ1QSEBM46DBK2DR77">SDK logging</h1>
+<h2 id="h_01HAVQNJQQ1QSEBM46DBK2DR77">Enable logging</h2>
 <p>
   The first thing you should do while integrating our SDK is enable logging. If
   logging is enabled, then our SDK will print out debug messages about its internal
   state and encountered problems.
 </p>
 <p>
-  Call <code class="javascript">setLoggingEnabled</code> on the config object to
+  Call <code class="JavaScript">setLoggingEnabled</code> on the config object to
   enable logging:
 </p>
-<pre><code class="javascript">  // create Countly config object
-  const countlyConfig = new CountlyConfig("https://try.count.ly", "YOUR_APP_KEY");
-  // ...
+<pre><code class="hljs coffeescript">  // create Countly config object
+  const countlyConfig = new CountlyConfig("https://try.count.ly", "YOUR_APP_KEY");<br>  // ... 
   countlyConfig.setLoggingEnabled(true); // Enable countly internal debugging logs
   await Countly.initWithConfig(countlyConfig); // Initialize the countly SDK with config.
   </code></pre>
 <p>
   For more information on where to find the SDK logs you can check the documentation
   <a href="https://support.count.ly/hc/en-us/articles/900000908046-Getting-started-with-SDKs#finding-sdk-logs" target="blank">here</a>.
+</p>
+<h2 id="h_01HAVQNJQQE2NNR8AVVZD1EHNT">Device ID</h2>
+<p>
+  You may provide your own custom device ID when initializing the SDK using the
+  method below.
+</p>
+<pre>  // create Countly config object<br>  const countlyConfig = new CountlyConfig("https://try.count.ly", "YOUR_APP_KEY");
+  // ...
+  countlyConfig.setDeviceId(DEVICE_ID); // Set device ID
+  await Countly.initWithConfig(countlyConfig); // Initialize the countly SDK with config.
+</pre>
+<h2 id="h_01HAVQNJQQMT24JF8S477H9WJB" class="anchor-heading">SDK data storage</h2>
+<p>
+  For iOS: SDK data is stored in Application Support Directory in a file named
+  "Countly.dat" For Android: SDK data is stored in SharedPreferences. A SharedPreferences
+  object points to a file containing key-value pairs and provides simple methods
+  to read and write them.
 </p>
 <h1 id="h_01HAVQNJQQ54VGN5SK3J9YZYCN">Crash reporting</h1>
 <p>
@@ -205,7 +219,7 @@ Countly.setCustomCrashSegments(segment);</code></pre>
   currently 20.11.6):
 </p>
 <pre><code class="shell">dependencies {
-    implementation 'ly.count.android:sdk-native:LATEST_VERSION'
+    implementation 'ly.count.android:sdk-native:LATEST_VERSION'    
 }</code></pre>
 <p>
   Then call <code class="JavaScript">Countly.initNative()</code> method as early
@@ -220,7 +234,7 @@ Countly.setCustomCrashSegments(segment);</code></pre>
   <code class="JavaScript">YOUR_REACT_NATIVE_PROJECT_PATH/android/app/src/main/java/com/PROJECT_NAME</code>
 </p>
 <pre>// import this in your Application class
-import ly.count.android.sdknative.CountlyNative;
+import ly.count.android.sdknative.CountlyNative; 
 
 // call this function in "onCreate" callback of Application class
 CountlyNative.initNative(getApplicationContext());</pre>
@@ -241,7 +255,7 @@ CountlyNative.initNative(getApplicationContext());</pre>
 </p>
 <pre><code class="text">$ adb logcat -s Countly:V countly_breakpad_cpp:V
 
-# when Countly.initNative() is called
+# when Countly.initNative() is called 
 
 D/countly_breakpad_cpp(123): breakpad initialize succeeded. dump files will be saved at /Countly/CrashDumps
 
@@ -250,7 +264,7 @@ D/countly_breakpad_cpp(123): breakpad initialize succeeded. dump files will be s
 D/countly_breakpad_cpp(123): DumpCallback started
 D/countly_breakpad_cpp(123): DumpCallback ==&gt; succeeded path=/Countly/CrashDumps/30f6d9b8-b3b2-1553-2efe0ba2-36588990.dmp
 
-# when app is run again after the crash
+# when app is run again after the crash 
 
 D/Countly (124): Initializing...
 D/Countly (124): Checking for native crash dumps
@@ -330,8 +344,8 @@ Countly.sendEvent(event);</code></pre>
 <p>
   <strong>3. Event key and count with segmentation(s)</strong>
 </p>
-<pre><code class="JavaScript">var event = {"eventName":"purchase","eventCount":1};
-event.segments = {"Country" : "Germany", "app_version" : "1.0"};
+<pre><code class="JavaScript">var event = {"eventName":"purchase","eventCount":1}; 
+event.segments = {"Country" : "Germany", "app_version" : "1.0"}; 
 Countly.sendEvent(event);</code></pre>
 <p>
   <strong>4. Event key, count, and sum with segmentation(s)</strong>
@@ -354,7 +368,7 @@ Countly.sendEvent(event);</code></pre>
 Countly.startEvent(eventName);
 //wait some time
 
-//end the event
+//end the event 
 Countly.endEvent(eventName);</code></pre>
 <p>
   You may also provide additional information when ending an event. However, in
@@ -381,7 +395,7 @@ Countly.endEvent(event);
 Countly.startEvent(eventName);
 //wait some time
 
-//cancel the event
+//cancel the event 
 Countly.cancelEvent(eventName);</code></pre>
 <h1 id="h_01HAVQNJQR7VTSADNK0KZGAE8H">View tracking</h1>
 <p>You may track custom views with the following code snippet:</p>
@@ -767,32 +781,29 @@ console.log(JSON.stringify(theNotification));
   receive and action callbacks when SDK is not initialized.
 </p>
 <pre><code class="JavaScript">// For push notification received and action callbacks.
-- (BOOL)application:(UIApplication *)application didFinishLaunchingWithOptions:(NSDictionary*)launchOptions<br>{<br>  [CountlyReactNative startObservingNotifications];<br>}</code></pre>
+- (BOOL)application:(UIApplication *)application didFinishLaunchingWithOptions:(NSDictionary *)launchOptions<br>{<br>  [CountlyReactNative startObservingNotifications];<br>}</code></pre>
 <p>
   Before <code>@end</code> add these method
 </p>
 <pre><code class="JavaScript">// Required for the notification event. You must call the completion handler after handling the remote notification.
-- (void)application:(UIApplication *)application didReceiveRemoteNotification:(NSDictionary*)userInfo fetchCompletionHandler:(void (^)(UIBackgroundFetchResult))completionHandler
+- (void)application:(UIApplication *)application didReceiveRemoteNotification:(NSDictionary *)userInfo fetchCompletionHandler:(void (^)(UIBackgroundFetchResult))completionHandler
 {
   [CountlyReactNative onNotification: userInfo];
   completionHandler(0);
 }
 
 // When app is killed.
-
-- (void)userNotificationCenter:(UNUserNotificationCenter *)center didReceiveNotificationResponse:(UNNotificationResponse*)response withCompletionHandler:(void (^)(void))completionHandler{
+- (void)userNotificationCenter:(UNUserNotificationCenter *)center didReceiveNotificationResponse:(UNNotificationResponse *)response withCompletionHandler:(void (^)(void))completionHandler{
   [CountlyReactNative onNotificationResponse: response];
   completionHandler();
 }
 
 // When app is running.
-
-- (void)userNotificationCenter:(UNUserNotificationCenter *)center willPresentNotification:(UNNotification*)notification withCompletionHandler:(void (^)(UNNotificationPresentationOptions options))completionHandler{
+- (void)userNotificationCenter:(UNUserNotificationCenter *)center willPresentNotification:(UNNotification *)notification withCompletionHandler:(void (^)(UNNotificationPresentationOptions options))completionHandler{
   [CountlyReactNative onNotification: notification.request.content.userInfo];
   completionHandler(0);
 }
 </code></pre>
-
 <h3 id="h_01HAVQNJQS165PB76SXZHC84PV">Data Structure Received in Push Callbacks</h3>
 <p>
   Here is an example of how the data will be received in push callbacks:<img src="/guide-media/01GYZ1ETTFDZQAMC8YA0Y0AQ8G" alt="004.png"><br>
@@ -1013,21 +1024,19 @@ await Countly.initWithConfig(countlyConfig); // Initialize the countly SDK with 
 <pre><code class="javascript">Countly.presentRatingWidgetWithID("WidgetId", "Button Text", function(error){<br>if (error != null) {<br>  console.log(error);<br>}<br>});</code></pre>
 <h2 id="h_01HAVQNJQS4TRX89X6GSGWQGGV">Feedback Widget</h2>
 <p>
-  It is possible to display 3 kinds of Feedback widgets:
-  <a href="https://support.count.ly/hc/en-us/articles/4652903481753-Feedback-Surveys-NPS-and-Ratings-#h_01HAY62C2QB9K7CRDJ90DSDM0D" target="_blank" rel="noopener noreferrer">NPS</a>,
-  <a href="https://support.count.ly/hc/en-us/articles/4652903481753-Feedback-Surveys-NPS-and-Ratings-#h_01HAY62C2Q965ZDAK31TJ6QDRY" target="_blank" rel="noopener noreferrer">Surveys</a>
+  It is possible to display 2 kinds of Surveys widgets:
+  <a href="https://support.count.ly/hc/en-us/articles/900003407386-NPS-Net-Promoter-Score-" target="_blank" rel="noopener">NPS</a>
   and
-  <a href="https://support.count.ly/hc/en-us/articles/4652903481753-Feedback-Surveys-NPS-and-Ratings-#h_01HAY62C2R4S05V7WJC5DEVM0N" target="_blank" rel="noopener noreferrer">Rating</a>.
-  All widgets are shown as webviews and they use the same methods to present them.
+  <a href="https://support.count.ly/hc/en-us/articles/900004337763-Surveys" target="_blank" rel="noopener">Surveys</a>.
+  Both widgets are shown as webviews and they both use the same code methods.
 </p>
 <p>
-  Before any Feedback widget can be shown, you need to create them in your Countly
+  Before any Surveys widget can be shown, you need to create them in your Countly
   Dashboard.
 </p>
 <p>
-  When the widgets are created, you need to use 2 calls in your SDK to show them:
-  one to get all available widgets for a user and another to display, a chosen
-  widget.
+  When the widgets are created, you need to use 2 calls in your SDK: one to get
+  all available widgets for a user and another to display, a chosen widget.
 </p>
 <p>To get your available widget list, use the call below.</p>
 <pre><code class="javascript">Countly.getFeedbackWidgets(function(retrivedWidgets, error){<br> if (error != null) {<br>  console.log("Error : " + error);<br> }<br> else {<br>  console.log(retrivedWidgets.length)<br> }<br>});</code></pre>
@@ -1036,10 +1045,11 @@ await Countly.initWithConfig(countlyConfig); // Initialize the countly SDK with 
   device ID.
 </p>
 <p>The objects in the returned list look like this:</p>
-<pre><code class="javascript">{ <br>  "id"   : "WIDGET_ID",<br>  "type" : "WIDGET_TYPE",<br>  "name" : "WIDGET_NAME",<br>  "tag"  : "WIDGET_TAG"<br>}</code></pre>
+<pre><code class="javascript">{ <br>  "id"   : "WIDGET_ID",<br>  "type" : "WIDGET_TYPE",<br>  "name" : "WIDGET_NAME",<br>}</code></pre>
 <p>
   To determine what kind of widget that is, check the "type" value. The potential
-  values are <code>survey</code>, <code>nps</code> and <code>rating</code>.
+  values are <code class="JavaScript">survey</code> and
+  <code class="JavaScript">nps</code>.
 </p>
 <p>
   Then use the widget type and description (which is the same as provided in the
@@ -1048,71 +1058,7 @@ await Countly.initWithConfig(countlyConfig); // Initialize the countly SDK with 
 <p>
   After you have decided which widget you want to display, call the function below.
 </p>
-<pre><code class="javascript">Countly.presentFeedbackWidgetObject(RETRIEVED_WIDGET_OBJECT, "CLOSE_BUTTON_TEXT", function() {<br>  console.log("Widgetshown");<br>},<br>function() {<br>  console.log("Widgetclosed");<br>})<br></code></pre>
-<h3 id="h_01HBZPWR8E1BF4J850A5VB9BGJ">Manual Reporting</h3>
-<p>
-  If you have a custom UI where you collect user feedback or you already have some
-  feedback data in your system you can report that information to specific feedback
-  widgets that you have created in your dashboard through the SDK manually.
-</p>
-<p>This processes consists of three steps:</p>
-<ul>
-  <li>
-    Retrieving the list of available widgets and picking one. This is the same
-    initial step while using the feedback widgets and reuses the same call to
-    retrieve them.
-  </li>
-  <li>
-    Download widget data from the server (here you would use a widget you pick
-    at step one).
-  </li>
-  <li>
-    Report the feedback result (for that single widget according to the data
-    from the previous step).
-  </li>
-</ul>
-<p>To get your available widget list, use the call below.</p>
-<pre><code class="javascript">// with callback
-Countly.feedback.getAvailableFeedbackWidgets(function(retrivedWidgets, error){
-  if (error != null) {
-    console.log("Error : " + error);
-  }
-  else {
-    console.log(retrivedWidgets)
-  }
-});
-
-//OR async
-Object response = await Countly.feedback.getAvailableFeedbackWidgets();
-if (!response.error) {
-  // pick a widget from response.data array
-  const widgetInfo = response.data[0];
-}</code></pre>
-<p>To download the widget data use:</p>
-<pre><code class="javascript">// with callback
-Countly.feedback.getFeedbackWidgetData(widget,function(retrivedWidgetData, error){
-  if (error != null) {
-    console.log("Error : " + error);
-  }
-  else {
-    console.log(retrivedWidgetData)
-  }
-});
-
-//OR async
-Object response = await Countly.feedback.getFeedbackWidgetData(widget);
-if (!response.error) {
-// check the response.data Object to learn what is needed to be reported
-  const widgetData = response.data;
-}</code></pre>
-<p>
-  Then after these two steps you would need to create a widgetResult Object and
-  pass it to the function below with the other information you have gathered so
-  far. You can check
-  <a href="https://support.count.ly/hc/en-us/articles/9290669873305-A-deeper-look-at-SDK-concepts#h_01HABT18WT0D08H8DR2BAD77T2" target="_blank" rel="noopener noreferrer">this</a>
-  in-depth guide to learn how to form this object:
-</p>
-<pre><code class="javascript">Countly.feedback.reportFeedbackWidgetManually(widgetInfo, widgetData, widgetResult);</code></pre>
+<pre><code class="javascript">Countly.presentFeedbackWidgetObject(RETRIEVED_WIDGET_OBJECT, "CLOSE_BUTTON_TEXT", function() {<br>  console.log("WidgetshownCallback");<br>},<br>function() {<br>  console.log("WidgetclosedCallabck");<br>})<br></code></pre>
 <h1 id="h_01HAVQNJQSW54CC0XFHA30BPC8">User Profiles</h1>
 <p>
   You can provide Countly any details you may have about your user or visitor.
@@ -1572,78 +1518,30 @@ buildTypes {
   By following these steps, the Countly Messaging classes will be obfuscated using
   Proguard and your application will be better protected against reverse engineering.
 </p>
-<h1 id="h_01HAVQNJQTVQ1CQD7VGBYY6HFV">Other Features and Notes</h1>
-<h2 id="h_01HBZGC0M48MT2JRYM9N89SJ8P">SDK Config Parameters Explained</h2>
+<h1 id="h_01HAVQNJQTVQ1CQD7VGBYY6HFV">Other features</h1>
+<h2 id="h_01HAVQNJQTXCW1K0039GTD0Z3R">Custom Metrics</h2>
+<div class="callout callout--info">
+  <strong>Minimum Countly SDK Version</strong>
+  <p>
+    This feature is only supported by the minimum SDK version 20.11.7.
+  </p>
+</div>
 <p>
-  You may provide your own custom device ID when initializing the SDK using the
-  method below.
+  For overriding default metrics or adding extra ones that are sent with begin_session
+  requests, you can use pass 'customMetric' Object to the function
+  <code>Countly.setCustomMetrics(customMetric)</code>, 'customMetric' should be
+  an Object with keys and values that are both Strings only. Note that the custom
+  metrics should be set before initialization.
 </p>
-<pre>  // create Countly config object<br>  const countlyConfig = new CountlyConfig("https://try.count.ly", "YOUR_APP_KEY");
-  // ...
-  countlyConfig.setDeviceId(DEVICE_ID); // Set device ID
-  await Countly.initWithConfig(countlyConfig); // Initialize the countly SDK with config.
-</pre>
-<h2 id="h_01HBZGC0M4JG8E6DCYCD04HQTJ">SDK Storage and Requests</h2>
+<pre><code class="JavaScript">var customMetric = {"key": "value"};
+Countly.setCustomMetrics(customMetric);</code></pre>
 <p>
-  For iOS: SDK data is stored in Application Support Directory in a file named
-  "Countly.dat" For Android: SDK data is stored in SharedPreferences. A SharedPreferences
-  object points to a file containing key-value pairs and provides simple methods
-  to read and write them.
+  For more information on the specific metric keys used by Countly, check
+  <a href="https://support.count.ly/hc/en-us/articles/9290669873305#setting-custom-user-metrics" target="_self">here</a>.
 </p>
-<h3 id="h_01HAVQNJQVEMEHN5ZF3DTYNG84">Setting Event Queue Threshold</h3>
-<p>
-  Events get grouped together and are sent either every minute or after the unsent
-  event count reaches a threshold. By default it is 10. If you would like to change
-  this, call:
-</p>
-<pre>Countly.setEventSendThreshold(6);</pre>
-<h3 id="h_01HAVQNJQTRAKGYDMT0NB7GVNA">Forcing HTTP POST</h3>
-<p>
-  If the data sent to the server is short enough, the SDK will use HTTP GET requests.
-  In the event you would like an override so that HTTP POST may be used in all
-  cases, call the <code class="JavaScript">setHttpPostForced</code> function after
-  you have called <code class="JavaScript">initWithConfig</code>. You may use the
-  same function later in the app’s life cycle to disable the override. This function
-  has to be called every time the app starts, using the method below.
-</p>
-<pre><code class="javascript">// enabling the override
-Countly.setHttpPostForced(true);
-  
-// disabling the override
-Countly.setHttpPostForced(false);</code></pre>
-<h3 id="h_01HAVQNJQTKPQPAY8MBKTP66DE">Interacting with the Internal Request Queue</h3>
-<p>
-  When recording events or activities, the requests don't always get sent immediately.
-  Events get grouped together. All the requests contain the same app key which
-  is provided in the <code class="JavaScript">initWithConfig</code> function.
-</p>
-<p>
-  There are two ways to interact with the app key in the request queue at the moment.
-</p>
-<p>
-  1. You can replace all requests with a different app key with the current app
-  key:
-</p>
-<pre>//Replaces all requests with a different app key with the current app key.
-Countly.replaceAllAppKeysInQueueWithCurrentAppKey();</pre>
-<p>
-  In the request queue, if there are any requests whose app key is different than
-  the current app key, these requests app key will be replaced with the current
-  app key. 2. You can remove all requests with a different app key in the request
-  queue:
-</p>
-<pre>//Removes all requests with a different app key in request queue.
-Countly.removeDifferentAppKeysFromQueue();</pre>
-<p>
-  In the request queue, if there are any requests whose app key is different than
-  the current app key, these requests will be removed from the request queue.
-</p>
-<h2 id="01HBZGDQ57D82CFMYJH2FBXWEQ">Checking If the SDK Has Been Initialized</h2>
-<p>
-  In the event you would like to check if initWithConfig has been called, use the
-  function below.
-</p>
-<pre><code class="javascript">Countly.isInitialized().then(result =&gt; console.log(result)); // true or false</code></pre>
+<p>Example to override 'Carrier' and 'App Version'</p>
+<pre><code class="JavaScript">var customMetric = {"_carrier": "custom carrier", "_app_version": "2.1"};
+Countly.setCustomMetrics(customMetric);</code></pre>
 <h2 id="h_01HAVQNJQTHCHN59TAVZC63NAD">Attribution</h2>
 <p>This feature is available for the Enterprise Edition.</p>
 <p>
@@ -1692,28 +1590,66 @@ Countly.removeDifferentAppKeysFromQueue();</pre>
   by Apple, regarding Application Tracking, you need to ask the user for permission
   to track the Application.
 </p>
-<h2 id="h_01HAVQNJQTXCW1K0039GTD0Z3R">Custom Metrics</h2>
-<div class="callout callout--info">
-  <strong>Minimum Countly SDK Version</strong>
-  <p>
-    This feature is only supported by the minimum SDK version 20.11.7.
-  </p>
-</div>
+<h2 id="h_01HAVQNJQTRAKGYDMT0NB7GVNA">Forcing HTTP POST</h2>
 <p>
-  For overriding default metrics or adding extra ones that are sent with begin_session
-  requests, you can use pass 'customMetric' Object to the function
-  <code>Countly.setCustomMetrics(customMetric)</code>, 'customMetric' should be
-  an Object with keys and values that are both Strings only. Note that the custom
-  metrics should be set before initialization.
+  If the data sent to the server is short enough, the SDK will use HTTP GET requests.
+  In the event you would like an override so that HTTP POST may be used in all
+  cases, call the <code class="JavaScript">setHttpPostForced</code> function after
+  you have called <code class="JavaScript">initWithConfig</code>. You may use the
+  same function later in the app’s life cycle to disable the override. This function
+  has to be called every time the app starts, using the method below.
 </p>
-<pre><code class="JavaScript">var customMetric = {"key": "value"};
-Countly.setCustomMetrics(customMetric);</code></pre>
+<pre><code class="javascript">  
+// enabling the override
+Countly.setHttpPostForced(true);
+  
+// disabling the override
+Countly.setHttpPostForced(false);</code></pre>
+<h2 id="h_01HAVQNJQT7R2VAJH48J0ZV642">Checking if initWithConfig has been called</h2>
 <p>
-  For more information on the specific metric keys used by Countly, check
-  <a href="https://support.count.ly/hc/en-us/articles/9290669873305#setting-custom-user-metrics" target="_self">here</a>.
+  In the event you would like to check if initWithConfig has been called, use the
+  function below.
 </p>
-<p>Example to override 'Carrier' and 'App Version'</p>
-<pre><code class="JavaScript">var customMetric = {"_carrier": "custom carrier", "_app_version": "2.1"};
-Countly.setCustomMetrics(customMetric);</code></pre>
-<h2 id="01HBZGNE148R4FSFYFTJMWP20Q">&nbsp;</h2>
-<p>&nbsp;</p>
+<pre><code class="javascript">Countly.isInitialized().then(result =&gt; console.log(result)); // true or false
+</code></pre>
+<h2 id="h_01HAVQNJQTK5KKKK5GV1YJRHEB">Checking if onStart has been called</h2>
+<p>
+  For some applications, there might be a use case where the developer would like
+  to check if the Countly SDK onStart function has been called. To do so, use the
+  call below.
+</p>
+<pre><code class="javascript">Countly.hasBeenCalledOnStart().then(result =&gt; console.log(result)); // true or false </code></pre>
+<h2 id="h_01HAVQNJQTKPQPAY8MBKTP66DE">Interacting with the internal request queue</h2>
+<p>
+  When recording events or activities, the requests don't always get sent immediately.
+  Events get grouped together. All the requests contain the same app key which
+  is provided in the <code class="JavaScript">initWithConfig</code> function.
+</p>
+<p>
+  There are two ways to interact with the app key in the request queue at the moment.
+</p>
+<p>
+  1. You can replace all requests with a different app key with the current app
+  key:
+</p>
+<pre>//Replaces all requests with a different app key with the current app key.
+Countly.replaceAllAppKeysInQueueWithCurrentAppKey();</pre>
+<p>
+  In the request queue, if there are any requests whose app key is different than
+  the current app key, these requests app key will be replaced with the current
+  app key. 2. You can remove all requests with a different app key in the request
+  queue:
+</p>
+<pre>//Removes all requests with a different app key in request queue.
+Countly.removeDifferentAppKeysFromQueue();</pre>
+<p>
+  In the request queue, if there are any requests whose app key is different than
+  the current app key, these requests will be removed from the request queue.
+</p>
+<h2 id="h_01HAVQNJQVEMEHN5ZF3DTYNG84">Setting an event queue threshold</h2>
+<p>
+  Events get grouped together and are sent either every minute or after the unsent
+  event count reaches a threshold. By default it is 10. If you would like to change
+  this, call:
+</p>
+<pre>Countly.setEventSendThreshold(6);</pre>
