Unity-Documentation Updates

--- a/unity/22.06.0.md
+++ b/unity/22.06.0.md
@@ -1,12 +1,12 @@
 <p>
-  <span>This document will guide you through the process of Countly SDK installation and it applies to version 23.06.0</span><br>
+  <span>This document will guide you through the process of Countly SDK installation and it applies to version 22.06.0</span><br>
   You can download the latest release from
   <a href="https://github.com/Countly/countly-sdk-unity/releases/" target="_self" rel="undefined">Github</a>.&nbsp;
 </p>
 <div class="callout callout--info">
   <p>
     Click
-    <a href="https://support.count.ly/hc/en-us/articles/360037236571-Downloading-and-Installing-SDKs#h_01H9QCP8G8GY2M2KEKK3CSKY3F" target="_self" rel="undefined">here, </a>to
+    <a href="https://support.count.ly/hc/en-us/articles/360037236571-Downloading-and-Installing-SDKs#unity-sdk" target="_self" rel="undefined">here, </a>to
     access the documentation for older SDK versions.
   </p>
 </div>
@@ -42,7 +42,7 @@
   need to import all the files in the package.
 </p>
 <p class="wysiwyg-text-align-center">
-  <img src="/hc/article_attachments/4404570305433/Screenshot_2021-03-09_at_6.02.04_PM.png" alt="Screenshot_2021-03-09_at_6.02.04_PM.png" width="435" height="719">
+  <img src="/guide-media/01GVC1JBG025D3FBPJYN3EJR9V" alt="Screenshot_2021-03-09_at_6.02.04_PM.png" width="435" height="719">
 </p>
 <p>
   <span data-preserver-spaces="true">This SDK uses the </span><strong><span data-preserver-spaces="true">Newtonsoft Json</span></strong><span data-preserver-spaces="true"> package internally and it is required for the SDK to work. </span>
@@ -51,7 +51,7 @@
   <span data-preserver-spaces="true">Since Unity version 2020 this package is added to your project automatically by Unity. For versions before that, (2018 and 2019) you have to install this package in the project manually. </span>
 </p>
 <p>
-  <span data-preserver-spaces="true">One way to do Install the </span><strong><span data-preserver-spaces="true">Newtonsoft Json&nbsp;</span></strong><span data-preserver-spaces="true">package would be to use the built-in package manager. You would go to </span><strong><span data-preserver-spaces="true">Windows&nbsp;</span></strong><span data-preserver-spaces="true">=&gt;&nbsp;</span><strong><span data-preserver-spaces="true">Package Manager</span></strong><span data-preserver-spaces="true">. In there you would see something like this:<img src="/hc/article_attachments/6537960964505/image-newtonsoft.png" alt="image-newtonsoft.png"></span>
+  <span data-preserver-spaces="true">One way to do Install the </span><strong><span data-preserver-spaces="true">Newtonsoft Json&nbsp;</span></strong><span data-preserver-spaces="true">package would be to use the built-in package manager. You would go to </span><strong><span data-preserver-spaces="true">Windows&nbsp;</span></strong><span data-preserver-spaces="true">=&gt;&nbsp;</span><strong><span data-preserver-spaces="true">Package Manager</span></strong><span data-preserver-spaces="true">. In there you would see something like this:<img src="/guide-media/01GVDG0BAGCD7VJ9EYNK3GS32F" alt="image-newtonsoft.png"></span>
 </p>
 <h1 id="h_01HABTZ3143Z9ZY3H02CEV868Z">SDK Integration</h1>
 <h2 id="h_01HABTZ314XCMNWWK698JR773J">Minimal Setup</h2>
@@ -63,7 +63,7 @@
 </p>
 <pre>CountlyConfiguration config = <strong>new</strong> CountlyConfiguration<br>{<br><strong>AppKey</strong> = <span>COUNTLY_APP_KEY,</span><br><strong>ServerUrl</strong> = <span>COUNTLY_SERVER_URL</span>,<br>};<br><br>Countly.Instance.Init(config);</pre>
 <p>
-  <span>In the </span><code>CountlyConfiguration</code><span> object, you provide appKey and your Countly server URL. Please check <a href="https://support.count.ly/hc/en-us/articles/900000908046-Getting-started-with-SDKs#h_01HABSX9KX44C9SF48WRPQNCP3">here</a> for more information on how to acquire your application key (APP_KEY) and server URL.</span>
+  <span>In the </span><code>CountlyConfiguration</code><span> object, you provide appKey and your Countly server URL. Please check <a href="https://support.count.ly/hc/en-us/articles/900000908046-Getting-started-with-SDKs#acquiring-your-application-key-and-server-url">here</a> for more information on how to acquire your application key (APP_KEY) and server URL.</span>
 </p>
 <div class="callout callout--info">
   <p>
@@ -161,10 +161,10 @@
 </p>
 <h2 id="h_01HABTZ314W6CP02BBBHB6FBKJ" class="anchor-heading">Handled exceptions</h2>
 <p>
-  <span>You might catch an exception or similar error during your app’s runtime.</span><span> You may also log these handled exceptions to monitor how and when they are happening. </span>To
+  <span>You might catch an exception or similar error during your app’s runtime.</span><span>You may also log these handled exceptions to monitor how and when they are happening. </span>To
   log exception use the following code snippet:
 </p>
-<pre><strong>await</strong> countly.CrashReports.SendCrashReportAsync(ex.Message, ex.StackTrace, null, false); </pre>
+<pre><strong>await</strong> countly.CrashReports.SendCrashReportAsync(ex.Message, ex.StackTrace, LogType.Exception, null, false); </pre>
 <p>Here is the detail of the parameters:</p>
 <ul>
   <li>
@@ -176,6 +176,10 @@
     describes the contents of the call stack.
   </li>
   <li>
+    <strong>type - </strong>(<span>Mandatory, </span>LogType) The type of the
+    log message.
+  </li>
+  <li>
     <strong>segments - </strong>(Optional, ) Custom key/values to be reported.
   </li>
   <li>
@@ -184,14 +188,14 @@
   </li>
 </ul>
 <p>Example:</p>
-<pre><strong>try</strong><br> {<br><strong>    throw</strong> <strong>new</strong> DivideByZeroException();<br> }<br> <strong>catch</strong> (Exception ex)<br> {<br>    <strong>await</strong> countly.CrashReports.SendCrashReportAsync(ex.Message, ex.StackTrace); <br> }&nbsp;<br><br></pre>
+<pre><strong>try</strong><br> {<br><strong>    throw</strong> <strong>new</strong> DivideByZeroException();<br> }<br> <strong>catch</strong> (Exception ex)<br> {<br>    <strong>await</strong> countly.CrashReports.SendCrashReportAsync(ex.Message, ex.StackTrace, LogType.Exception); <br> }&nbsp;<br><br></pre>
 <p class="anchor-heading">You can also send a segmentation with an exception.</p>
-<pre><span><br>Dictionary&lt;string, object&gt; segmentation = <strong>new</strong> Dictionary&lt;string, object&gt;{<br>{ "Action", "click"}<br>};<br><strong><br>try</strong><br>{<br><strong> throw</strong> <strong>new</strong> DivideByZeroException();<br>}<br><strong>catch</strong> (Exception ex)<br>{<br><strong>await</strong> countly.CrashReports.SendCrashReportAsync(ex.Message, ex.StackTrace, segmentation, true); <br>}&nbsp;</span></pre>
+<pre><span><br>Dictionary&lt;string, object&gt; segmentation = <strong>new</strong> Dictionary&lt;string, object&gt;{<br>{ "Action", "click"}<br>};<br><strong><br>try</strong><br>{<br><strong> throw</strong> <strong>new</strong> DivideByZeroException();<br>}<br><strong>catch</strong> (Exception ex)<br>{<br><strong>await</strong> countly.CrashReports.SendCrashReportAsync(ex.Message, ex.StackTrace, LogType.Exception, segmentation, true); <br>}&nbsp;</span></pre>
 <p>
   <span>If you have handled an exception and it turns out to be fatal to your app, you may use the following calls:</span>
 </p>
-<pre><strong>await</strong> countly.CrashReports.SendCrashReportAsync(ex.Message, ex.StackTrace, null, false); </pre>
-<pre>Dictionary&lt;string, object&gt; segmentation = <strong>new</strong> Dictionary&lt;string, object&gt;{<br>{ "Action", "click"}<br>};<br><br><strong>await</strong> countly.CrashReports.SendCrashReportAsync(ex.Message, ex.StackTrace, segmentation, false); </pre>
+<pre><strong>await</strong> countly.CrashReports.SendCrashReportAsync(ex.Message, ex.StackTrace, LogType.Exception, null, false); </pre>
+<pre>Dictionary&lt;string, object&gt; segmentation = <strong>new</strong> Dictionary&lt;string, object&gt;{<br>{ "Action", "click"}<br>};<br><br><strong>await</strong> countly.CrashReports.SendCrashReportAsync(ex.Message, ex.StackTrace, LogType.Exception, segmentation, false); </pre>
 <h2 id="h_01HABTZ314FEB9WM3P718TVMHY" class="anchor-heading">Crash breadcrumbs</h2>
 <p>
   Throughout your app, you can leave crash breadcrumbs. They are short logs<span>&nbsp;that </span>would
@@ -558,7 +562,7 @@ Countly.Instance.Events.CancelEvent(eventName);</code></pre>
 <p>
   1. In Unity, go to <strong>Player Settings.&nbsp;</strong>In the
   <strong>Other Settings</strong> section, add the
-  <span><strong>"COUNTLY_ENABLE_IOS_PUSH"&nbsp; </strong>symbol in </span><strong>Scripting Define Symbols.</strong><strong><img src="/hc/article_attachments/900004317706/Screenshot_2020-10-27_at_4.07.16_PM.png" alt="Screenshot_2020-10-27_at_4.07.16_PM.png"></strong>
+  <span><strong>"COUNTLY_ENABLE_IOS_PUSH"&nbsp; </strong>symbol in </span><strong>Scripting Define Symbols.</strong><strong><img src="/guide-media/01GV9ZT9T72NE430KKRJMGNE4X" alt="Screenshot_2020-10-27_at_4.07.16_PM.png"></strong>
 </p>
 <p>
   2. After exporting the <strong>iOS</strong> project, open the project in
@@ -903,7 +907,7 @@ Countly.Instance.Events.CancelEvent(eventName);</code></pre>
   <span>In an effort to comply with GDPR, starting from 20.11.1, Unity Countly SDK provides ways to toggle different Countly features on/off depending on the given consent.</span>
 </p>
 <p>
-  More information about GDPR can be found<span>&nbsp;</span><a href="https://medium.com/countly/countly-the-gdpr-how-worlds-leading-mobile-and-web-analytics-platform-can-help-organizations-5015042fab27">here</a>.
+  More information about GDPR can be found<span>&nbsp;</span><a href="https://blog.count.ly/countly-the-gdpr-how-worlds-leading-mobile-and-web-analytics-platform-can-help-organizations-5015042fab27">here</a>.
 </p>
 <h2 id="h_01HABTZ3166JHBX2JCSEG70T78">Setup during init</h2>
 <p>
@@ -1006,7 +1010,7 @@ Countly.Instance.Events.CancelEvent(eventName);</code></pre>
 </p>
 <pre><code class="java hljs">configuration.Salt = "salt";</code></pre>
 <h1 id="h_01HABTZ317YY21TT4G68H4VJM4">Other Features</h1>
-<h2 id="h_01HCHSPK9JJC6GC35NHZJQ4F4Y">SDK Config Parameters Explained</h2>
+<h2 id="h_01HAVJBHR733N0P0ZV1MRM3PCS">SDK Config Parameters Explained</h2>
 <p>
   <span>To change the Configuration, update the values of parameters in the "<strong>CountlyConfiguration" </strong>object. Here are the details of the optional parameters:</span><span></span>
 </p>
@@ -1092,7 +1096,7 @@ Countly.Instance.Events.CancelEvent(eventName);</code></pre>
 <p>
   <span><strong>MaxStackTraceLineLength -&nbsp;</strong>(int) Limits how many characters are allowed per stack trace line. The default value is&nbsp;<strong>200</strong>.</span>
 </p>
-<h2 id="h_01HCHSPK9K615SPYZP2NF2KXN0">Setting Event Queue Threshold</h2>
+<h2 id="h_01HAVJBHR7VM1HJGP5Q57R1R0E">Setting Event Queue Threshold</h2>
 <p>
   In SDK configuration, you may limit the number of events that can be recorded
   internally by the system before they can all be sent together in one request.&nbsp;<br>
@@ -1103,7 +1107,7 @@ Countly.Instance.Events.CancelEvent(eventName);</code></pre>
   Once the threshold limit is reached, the system groups all recorded events and
   sends them to the server.
 </p>
-<h2 id="h_01HCHSPK9KGDDVYABV77TPEDFM">Setting Maximum Request Queue Size</h2>
+<h2 id="h_01HAVJBHR74HERF155WC9CPKKZ">Setting Maximum Request Queue Size</h2>
 <p>
   When you initialize Countly, you can specify a value for the StoredRequestLimit
   flag. This flag limits the number of requests that can be stored in the request
@@ -1127,13 +1131,13 @@ Countly.Instance.Events.CancelEvent(eventName);</code></pre>
   of 1,000 will be used.
 </p>
 <pre><code class="Java">StoredRequestLimit = 5000;</code></pre>
-<h2 id="h_01HCHSPK9K9CM6204WD2Z06WTZ">Checking if the SDK has been initialized</h2>
+<h2 id="h_01HAVJBHR7NPC2F0EWQHT96FCK">Checking if the SDK has been initialized</h2>
 <p>
   <span>In case you would like to check if init has been called, you may use the following property:</span>
 </p>
 <pre><code class="java hljs">Countly.Instance.IsSDKInitialized;</code></pre>
-<h1 id="h_01HCHSPK9KVEWVKRB0CRY25S8K">FAQ</h1>
-<h2 id="h_01HCHSPK9KTK4V1CCZXVND2TSV">What information is collected by the SDK</h2>
+<h1 id="h_01HAVJBHR7X2MPJXKDZCX283B3">FAQ</h1>
+<h2 id="h_01HAVJBHR7DCQHSF1EQ9MQ16C4">What information is collected by the SDK</h2>
 <p>
   The following description mentions data that is collected by SDK to perform their
   functions and implement the required features. Before any of it is sent to the
