--- a/android/23.8.md
+++ b/android/23.8.md
@@ -1,10 +1,10 @@
 <p>
-  <span style="font-weight: 400;">This document will guide you through the process of Countly SDK installation and it applies to version 23.12.X</span>
+  <span style="font-weight: 400;">This document will guide you through the process of Countly SDK installation and it applies to version 23.08.X</span>
 </p>
 <div class="callout callout--info">
   <p>
     Click
-    <a href="https://support.count.ly/hc/en-us/articles/360037236571-Downloading-and-Installing-SDKs#h_01H9QCP8G73H5RWXFK9P9W6F7Q" target="_self" rel="undefined">here, </a>to
+    <a href="https://support.count.ly/hc/en-us/articles/360037236571-Downloading-and-Installing-SDKs#android-sdk" target="_self" rel="undefined">here, </a>to
     access the documentation for older SDK versions.
   </p>
 </div>
@@ -39,7 +39,7 @@
 <p>The shortest way to initiate the SDK is with this call:</p>
 <pre><code>Countly.<span>sharedInstance</span>().init(<span>new </span>CountlyConfig(<span>this</span>, <span>COUNTLY_APP_KEY</span>, <span>COUNTLY_SERVER_URL</span>));</code></pre>
 <p>
-  <span style="font-weight: 400;">It is there that you provide the Android context, your appKey, and your Countly server URL. Please check <a href="https://support.count.ly/hc/en-us/articles/900000908046-Getting-started-with-SDKs#h_01HABSX9KX44C9SF48WRPQNCP3">here</a> for more information on how to acquire your application key (APP_KEY) and server URL.</span>
+  <span style="font-weight: 400;">It is there that you provide the Android context, your appKey, and your Countly server URL. Please check <a href="https://support.count.ly/hc/en-us/articles/900000908046-Getting-started-with-SDKs#acquiring-your-application-key-and-server-url">here</a> for more information on how to acquire your application key (APP_KEY) and server URL.</span>
 </p>
 <p>
   To configure the SDK during init, a config object called "CountlyConfig" is used.
@@ -51,7 +51,7 @@
   <p>
     If you are in doubt about the correctness of your Countly SDK integration
     you can learn about the verification methods from
-    <a href="https://support.count.ly/hc/en-us/articles/900000908046-Getting-started-with-SDKs#h_01HABSX9KXE6YKVETHDWPP8J3K" target="_blank" rel="noopener">here</a>.
+    <a href="https://support.count.ly/hc/en-us/articles/900000908046-Getting-started-with-SDKs#how-to-validate-your-countly-integration" target="blank">here</a>.
   </p>
 </div>
 <h2 id="h_01HAVQDM5S6PHPV8SAQ32HDXXT">SDK Logging</h2>
@@ -64,8 +64,23 @@
 <pre><code>CountlyConfig config = (<span>new </span>CountlyConfig(appC, <span>COUNTLY_APP_KEY</span>, <span>COUNTLY_SERVER_URL</span>));<br>config.setLoggingEnabled(<span>true</span>);</code></pre>
 <p>
   For more information on where to find the SDK logs you can check the documentation
-  <a href="https://support.count.ly/hc/en-us/articles/900000908046-Getting-started-with-SDKs#h_01HABSX9KXC5S8Q1NQWDZ33HXC" target="blank">here</a>.
+  <a href="https://support.count.ly/hc/en-us/articles/900000908046-Getting-started-with-SDKs#finding-sdk-logs" target="blank">here</a>.
 </p>
+<h2 id="h_01HAVQDM5SCJ6J2H4ATE3WMFV1">Device ID</h2>
+<p>
+  <span style="font-weight: 400;">All tracked information is tied to a "device ID". A device ID is a unique identifier for your users.</span>
+</p>
+<p>
+  <span style="font-weight: 400;">One of the first things you'll need to decide is which device ID generation strategy to use. There are several options defined below:</span>
+</p>
+<p>
+  <span style="font-weight: 400;">The easiest method is letting the Countly SDK seamlessly handle the device ID on its own. You may then use the following calls. It will use the default strategy, which currently is OpenUDID.</span>
+</p>
+<pre><code class="java">CountlyConfig config = (new CountlyConfig(appC, COUNTLY_APP_KEY, COUNTLY_SERVER_URL));<br>Countly.sharedInstance().init(config);</code></pre>
+<p>
+  <span style="font-weight: 400;">You may specify the device ID by yourself if you have one (it has to be unique for each device). It may be an email or some other internal ID used by your other systems.</span>
+</p>
+<pre><code class="java">CountlyConfig config = (new CountlyConfig(appC, COUNTLY_APP_KEY, COUNTLY_SERVER_URL));<br>config.setDeviceId("YOUR_DEVICE_ID");<br>Countly.sharedInstance().init(config);</code><code class="java"></code></pre>
 <h2 id="h_01HAVQDM5SXG0Q4MRTDYXJRA8H">Adding callbacks</h2>
 <p>
   After the&nbsp;<code>Countly.sharedInstance().init(...)</code><span style="font-weight: 400;">call, you'll need to add the following calls to all your activities:</span>
@@ -87,7 +102,7 @@
   <span style="font-weight: 400;">If the "onStart" and "onStop" calls are not added, some functionalities will not work, e.g. automatic sessions will not be tracked. The Countly "onStart" has to be called in the activities "onStart" function, it cannot be called in "onCreate" or in any other place, otherwise, the application will receive exceptions.</span>
 </p>
 <div class="img-container">
-  <img src="https://archive.count.ly/images/guide/283f96f-activity_lifecycle.png">
+  <img src="https://count.ly/images/guide/283f96f-activity_lifecycle.png">
 </div>
 <h2 id="h_01HAVQDM5SZSAZR4ZRD4Q1F1RR">Required App Permissions</h2>
 <p>
@@ -96,7 +111,7 @@
 <pre><code>&lt;uses-permission android:name="android.permission.INTERNET"/&gt;<br>&lt;uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /&gt;</code></pre>
 <h1 id="h_01HAVQDM5SSRZASQPBFV5YG0QV">Crash Reporting</h1>
 <p>
-  <span style="font-weight: 400;">The Countly SDK for Android has the ability to collect&nbsp;</span><a href="https://support.count.ly/hc/en-us/articles/4404213566105"><span style="font-weight: 400;">crash reports</span></a><span style="font-weight: 400;">,</span><span style="font-weight: 400;">&nbsp;which you may examine and resolve later on the server.</span>
+  <span style="font-weight: 400;">The Countly SDK for Android has the ability to collect&nbsp;</span><a href="http://resources.count.ly/docs/introduction-to-crash-reporting-and-analytics"><span style="font-weight: 400;">crash reports</span></a><span style="font-weight: 400;">,</span><span style="font-weight: 400;">&nbsp;which you may examine and resolve later on the server.</span>
 </p>
 <p>
   In the SDK all crash-related functionality can be browsed from the returned interface
@@ -180,7 +195,7 @@
   <img src="https://count.ly/images/guide/7cbb985-breakpad.png">
 </div>
 <p>
-  <span style="font-weight: 400;">Countly provides the&nbsp;</span><a href="https://github.com/Countly/countly-sdk-android/tree/master/sdk-native"><span style="font-weight: 400;">sdk_native</span></a><span style="font-weight: 400;">&nbsp;Android library to add crash handler to your native code and create crash minidump files. The SDK will check for those minidump files and send them automatically to your Countly server upon application start. You would download <code>sdk_native</code></span><span style="font-weight: 400;">&nbsp;from the MavenCentral repository and include it in your project, similar to how you included our SDK (please change the <code>LATEST_VERSION</code></span><span style="font-weight: 400;">&nbsp;below by checking our Maven&nbsp;</span><a href="https://central.sonatype.com/artifact/ly.count.android/sdk/versions"><span style="font-weight: 400;">page</span></a><span style="font-weight: 400;">, currently 23.8.3):</span>
+  <span style="font-weight: 400;">Countly provides the&nbsp;</span><a href="https://github.com/Countly/countly-sdk-android/tree/master/sdk-native"><span style="font-weight: 400;">sdk_native</span></a><span style="font-weight: 400;">&nbsp;Android library to add crash handler to your native code and create crash minidump files. The SDK will check for those minidump files and send them automatically to your Countly server upon application start. You would download <code>sdk_native</code></span><span style="font-weight: 400;">&nbsp;from the MavenCentral repository and include it in your project, similar to how you included our SDK (please change the <code>LATEST_VERSION</code></span><span style="font-weight: 400;">&nbsp;below by checking our Maven&nbsp;</span><a href="https://search.maven.org/artifact/ly.count.android/sdk"><span style="font-weight: 400;">page</span></a><span style="font-weight: 400;">, currently 20.11.12):</span>
 </p>
 <pre><code class="java">// build gradle file
 
@@ -203,7 +218,7 @@ CountlyNative.initNative(getApplicationContext());</code></pre>
 </p>
 <h2 id="h_01HAVQDM5TVAQT2CSB5JN46Y1P">Symbolication</h2>
 <p>
-  <span style="font-weight: 400;">You may create Breakpad symbol files yourself and upload them to your Countly server using our UI. They will be needed to create stack traces from minidump files. Countly also developed a Gradle plugin to automate this process. To use the upload plugin in Studio, you first need to include it (the LATEST_VERSION is currently 23.8.3):</span>
+  <span style="font-weight: 400;">You may create Breakpad symbol files yourself and upload them to your Countly server using our UI. They will be needed to create stack traces from minidump files. Countly also developed a Gradle plugin to automate this process. To use the upload plugin in Studio, you first need to include it (the LATEST_VERSION is currently 20.11.12):</span>
 </p>
 <h3 id="h_01HAVQDM5TDW9QZDBDY4PWKSBV">Automatic symbol file upload</h3>
 <pre><code class="java">apply plugin: ly.count.android.plugins.UploadSymbolsPlugin
@@ -287,7 +302,7 @@ buildscript {
 </p>
 <h1 id="h_01HAVQDM5T91A747VG56537NN9">Events</h1>
 <p>
-  <span style="font-weight: 400;">An</span><a href="https://support.count.ly/hc/en-us/articles/4403721560857-Events"><span style="font-weight: 400;">&nbsp;event</span></a><span style="font-weight: 400;">&nbsp;is any type of action that you can send to a Countly instance, e.g. purchases, changed settings, view enabled, and so on. This way it's possible to get much more information from your application compared to what is sent from the Android SDK to the Countly instance by default.</span>
+  <span style="font-weight: 400;">An</span><a href="http://resources.count.ly/docs/custom-events"><span style="font-weight: 400;">&nbsp;event</span></a><span style="font-weight: 400;">&nbsp;is any type of action that you can send to a Countly instance, e.g. purchases, changed settings, view enabled, and so on. This way it's possible to get much more information from your application compared to what is sent from the Android SDK to the Countly instance by default.</span>
 </p>
 <p>
   All data passed to the Countly server via the SDK or API should be in UTF-8.
@@ -417,7 +432,7 @@ Countly.sharedInstance().events().cancelEvent(eventName);</code></pre>
   Countly Android SDK comes with built in automatic session tracking functionality.
   Only thing necessary for this functionality to work is to add the proper calls
   to your activities after initializing the SDK. For more information you can check
-  <a href="https://support.count.ly/hc/en-us/articles/360037754031-Android#h_01HAVQDM5SXG0Q4MRTDYXJRA8H" target="_self">here</a>.
+  <a href="https://support.count.ly/hc/en-us/articles/360037754031-Android#adding-callbacks" target="_self">here</a>.
 </p>
 <h2 id="h_01HAVQDM5TBV8FDMH3JE23ZPQB">Manual Sessions</h2>
 <p>
@@ -541,20 +556,6 @@ config.setAutomaticViewSegmentation(automaticViewSegmentation);</code></pre>
   <span style="font-weight: 400;">To resume a view with its ID:</span>
 </p>
 <pre><span style="font-weight: 400;"><span>Countly.sharedInstance().views().resumeViewWithID("View ID");</span></span></pre>
-<h3 id="h_01HHNZEE94N9FH6GYZTR4A1H0M">
-  <span style="font-weight: 400;">Adding Segmentation to Started Views</span>
-</h3>
-<p>
-  <span style="font-weight: 400;">You can add segmentation values to a view before it ends. This can be done as many times as desired and the final segmentation that will be send to the server would be the cumulative sum of all segmentations. However if a certain segmentation value for a specific key has been updated, the latest value will be used.</span>
-</p>
-<p>
-  <span style="font-weight: 400;">To add segmentation to a view using its view ID:</span>
-</p>
-<pre><span style="font-weight: 400;">Map&lt;String, Object&gt; viewSegmentation = <span>new </span>HashMap&lt;&gt;();<br><br>viewSegmentation.put(<span>"Cats"</span>, <span>123</span>);<br>viewSegmentation.put(<span>"Moons"</span>, <span>9.98d</span>);<br>viewSegmentation.put(<span>"Moose"</span>, <span>"Deer"</span>);<br><br>Countly.<span>sharedInstance</span>().views().addSegmentationToViewWithID("View ID", viewSegmentation);</span></pre>
-<p>
-  <span style="font-weight: 400;">To add segmentation to a view using its name:</span>
-</p>
-<pre><span style="font-weight: 400;">Map&lt;String, Object&gt; viewSegmentation = <span>new </span>HashMap&lt;&gt;();<br><br>viewSegmentation.put(<span>"Cats"</span>, <span>123</span>);<br>viewSegmentation.put(<span>"Moons"</span>, <span>9.98d</span>);<br>viewSegmentation.put(<span>"Moose"</span>, <span>"Deer"</span>);<br><br>Countly.<span>sharedInstance</span>().views().addSegmentationToViewWithName("View Name", viewSegmentation);</span></pre>
 <h2 id="h_01HHNZ0MAP34090BTSV1KAYD4J">
   <span style="font-weight: 400;">Global View Segmentation</span>
 </h2>
@@ -574,19 +575,18 @@ config.setAutomaticViewSegmentation(automaticViewSegmentation);</code></pre>
 </div>
 <h1 id="h_01HAVQDM5TMQ1QR8F433J3B5P3">Device ID Management</h1>
 <p>
-  <span style="font-weight: 400;">All tracked information is tied to a "device ID". A device ID is a unique identifier for your users. When the SDK is initialized the first time and no custom device ID is provided, a random one will be generated. For most use cases that is enough as it provides a random identity to one of your apps users.</span>
+  When the SDK is initialized the first time and no custom device ID is provided,
+  a random one will be generated. For most use cases that is enough as it provides
+  a random identity to one of your apps users.
 </p>
 <p>
-  <span style="font-weight: 400;">One of the first things you'll need to decide is which device ID generation strategy to use. There are several options defined below:</span>
+  To solve other potential use cases, we provide 3 ways to handle your device id:
 </p>
-<p>
-  <span style="font-weight: 400;">The easiest method is letting the Countly SDK seamlessly handle the device ID on its own. You may then use the following calls. It will use the default strategy, which currently is OpenUDID.</span>
-</p>
-<pre><code class="java">CountlyConfig config = (new CountlyConfig(appC, COUNTLY_APP_KEY, COUNTLY_SERVER_URL));<br>Countly.sharedInstance().init(config);</code></pre>
-<p>
-  <span style="font-weight: 400;">You may specify the device ID by yourself if you have one (it has to be unique for each device). It may be an email or some other internal ID used by your other systems.</span>
-</p>
-<pre><code class="java">CountlyConfig config = (new CountlyConfig(appC, COUNTLY_APP_KEY, COUNTLY_SERVER_URL));<br>config.setDeviceId("YOUR_DEVICE_ID");<br>Countly.sharedInstance().init(config);</code><code class="java"></code></pre>
+<ul>
+  <li>Changing device ID with merge</li>
+  <li>Changing device ID without merge</li>
+  <li>Using a temporary ID</li>
+</ul>
 <h2 id="h_01HAVQDM5TPKRQAZGXW73GBM90">Changing Device ID</h2>
 <p>
   In case your application authenticates users, you might want to change the ID
@@ -1141,7 +1141,7 @@ Countly.sharedInstance().disableLocation();</code></pre>
 </p>
 <h1 id="h_01HAVQDM5VZMRFC551YX1JQSZR">Remote Config</h1>
 <p>
-  <span style="font-weight: 400;">Remote config allows you to modify how your app functions or looks by requesting key-value pairs from your Countly server. The returned values may be modified based on the user properties. For more details, please see the </span><a href="https://support.count.ly/hc/en-us/articles/9895605514009-Remote-Config"><span style="font-weight: 400;">Remote Config documentation</span></a><span style="font-weight: 400;">.</span>
+  <span style="font-weight: 400;">Remote config allows you to modify how your app functions or looks by requesting key-value pairs from your Countly server. The returned values may be modified based on the user properties. For more details, please see the </span><a href="https://resources.count.ly/docs/remote-config"><span style="font-weight: 400;">Remote Config documentation</span></a><span style="font-weight: 400;">.</span>
 </p>
 <p>
   Once downloaded, Remote config values will be saved persistently and available
@@ -1377,6 +1377,9 @@ Countly.sharedInstance().remoteConfig().removeDownloadCallback(RCDownloadCallbac
 config.enrollABOnRCDownload ();
 Countly.sharedInstance().init(config);</code></pre>
 <h3 id="h_01HC2A5JDVP2RCW9RJ4VD9FSET">Enrollment on Access</h3>
+<div class="callout callout--warning">
+  <p>Available starting from version 23.8.3</p>
+</div>
 <p>
   You can enroll to A/B tests while getting RC values from storage. You can use
   <code>getValueAndEnroll</code> while getting a single value and
@@ -1530,10 +1533,10 @@ Countly.sharedInstance().ratings().presentRatingWidgetWithID(widgetId, closeButt
 <h2 id="h_01HAVQDM5VNQE1BKTPNSXMX3BM">Feedback Widget</h2>
 <p>
   It is possible to display 3 kinds of feedback widgets:
-  <a href="https://support.count.ly/hc/en-us/articles/4652903481753-Feedback-Surveys-NPS-and-Ratings-#h_01HAY62C2QB9K7CRDJ90DSDM0D" target="_blank" rel="noopener">nps</a>,
-  <a href="https://support.count.ly/hc/en-us/articles/4652903481753-Feedback-Surveys-NPS-and-Ratings-#h_01HAY62C2Q965ZDAK31TJ6QDRY" target="_blank" rel="noopener">survey</a>
+  <a href="https://support.count.ly/hc/en-us/articles/900003407386-NPS-Net-Promoter-Score-" target="_blank" rel="noopener">nps</a>,
+  <a href="https://support.count.ly/hc/en-us/articles/900004337763-Surveys" target="_blank" rel="noopener">survey</a>
   and
-  <a href="https://support.count.ly/hc/en-us/articles/4652903481753-Feedback-Surveys-NPS-and-Ratings-#h_01HAY62C2R4S05V7WJC5DEVM0N" target="_blank" rel="noopener">rating</a>.
+  <a href="https://support.count.ly/hc/en-us/articles/360037641291-Ratings" target="_blank" rel="noopener">rating</a>.
   All widgets are shown as webviews and should be approached using the same methods.
 </p>
 <div class="callout callout--warning">
@@ -1608,7 +1611,7 @@ Countly.sharedInstance().ratings().presentRatingWidgetWithID(widgetId, closeButt
   <p>
     For how this retrievedWidgetData would look like and in depth information
     on this topic please check our detailed article
-    <a href="https://support.count.ly/hc/en-us/articles/9290669873305-A-deeper-look-at-SDK-concepts#h_01HABT18WT0D08H8DR2BAD77T2" target="_blank" rel="noopener">here</a>.
+    <a href="https://support.count.ly/hc/en-us/articles/9290669873305-A-deeper-look-at-SDK-concepts#reporting-a-feedback-widget-manually" target="_blank" rel="noopener">here</a>.
   </p>
 </div>
 <p>
@@ -1846,7 +1849,7 @@ Countly.sharedInstance().userProfile().save();</code></pre>
 </p>
 <p>
   More information about GDPR can be found
-  <a href="https://medium.com/countly/countly-the-gdpr-how-worlds-leading-mobile-and-web-analytics-platform-can-help-organizations-5015042fab27">here</a>.
+  <a href="https://blog.count.ly/countly-the-gdpr-how-worlds-leading-mobile-and-web-analytics-platform-can-help-organizations-5015042fab27">here</a>.
 </p>
 <h2 id="h_01HAVQDM5V9TH7NQNWADXD7BS6">Setup During Init</h2>
 <p>
@@ -1976,10 +1979,18 @@ Countly.sharedInstance().createFeatureGroup("groupName", groupFeatures);</code><
   Pinning is done during init through the CountlyConfig object.
 </p>
 <p>
-  <span>For more information on how to acquire the public key or the certificate, have a look <a href="https://support.count.ly/hc/en-us/articles/9290669873305-A-deeper-look-at-SDK-concepts#h_01HDNHXZ2Y30VG0D1TKCYPHJXT" target="_blank" rel="noopener noreferrer">here</a>.</span>
+  <span>To get the current public key or whole certificate from your server you can use one of these snippets (replace try.count.ly with your server name):</span>
+</p>
+<pre>//get the public key<br>openssl s_client -connect <span>try</span>.count.ly:<span>443 | openssl x509 -pubkey -noout
+<br>//get the list of certificates<br>openssl s_client -connect <span>try</span>.count.ly:<span>443 </span>-showcerts</span></pre>
+<p>
+  In the certificate case, the first entry would be the certificate for your server
+  (what you need to enter into SDK configuration) and the rest would be the chain
+  of trust to the root certificate authority.
 </p>
 <p>
-  Here is an example of public key pinning for a example server.
+  Here is an example of public key pinning for the <strong>try.count.ly</strong>
+  server.
 </p>
 <pre><span>//sample certificate for the countly try server<br></span>String[] certificates = <span>new </span>String[] {<br>    <span>"MIIGnjCCBYagAwIBAgIRAN73cVA7Y1nD+S8rToAqBpQwDQYJKoZIhvcNAQELBQAwgY8xCzAJ"<br></span><span>        </span>+ <span>"BgNVBAYTAkdCMRswGQYDVQQIExJHcmVhdGVyIE1hbmNoZXN0ZXIxEDAOBgNVBAcTB1"<br></span><span>        </span>+ <span>"NhbGZvcmQxGDAWBgNVBAoTD1NlY3RpZ28gTGltaXRlZDE3MDUGA1UEAxMuU2VjdGln"<br></span><span>        </span>+ <span>"byBSU0EgRG9tYWluIFZhbGlkYXRpb24gU2VjdXJlIFNlcnZlciBDQTAeFw0yMDA2MD"<br></span><span>        </span>+ <span>"EwMDAwMDBaFw0yMjA5MDMwMDAwMDBaMBUxEzARBgNVBAMMCiouY291bnQubHkwggEi"<br></span><span>        </span>+ <span>"MA0GCSqGSIb3DQEBAQUAA4IBDwAwggEKAoIBAQCl9zmATVRwrGRtRQJcmBmA+zc/ZL"<br></span><span>        </span>+ <span>"io3YfkwXO2w8u9lnw60J4JpPNn9OnGcxdM+sqbXKU3jTdjY4j3yaA6NlWibq2jU2x6"<br></span><span>        </span>+ <span>"HT2sS+I5gFFE/6tO53WqjoMk48i3FkyoJDittwtQrVaRGcP8RjJH0pfXaP+JLrLAgg"<br></span><span>        </span>+ <span>"HuW3tCFqYzkWi3uLGVjQbSIRNiXsM3FI0UMEa/x1I3U4hLjMjH28KagZbZLWnHOvks"<br></span><span>        </span>+ <span>"AvGLg3xQkS+GSQ+6ARZ2/bGh5O9q4hCCCk0/PpwAXmrOnWtwrNuwHcCDOvuB22JxLd"<br></span><span>        </span>+ <span>"t8jQDYrjwtJIvq4Yut8FQPv/75SKoETWWHyxe0x5NsB34UwA/BAgMBAAGjggNsMIID"<br></span><span>        </span>+ <span>"aDAfBgNVHSMEGDAWgBSNjF7EVK2K4Xfpm/mbBeG4AY1h4TAdBgNVHQ4EFgQU8uf/ND"<br></span><span>        </span>+ <span>"Rt8cu+AwARVIGXPMfxGbQwDgYDVR0PAQH/BAQDAgWgMAwGA1UdEwEB/wQCMAAwHQYD"<br></span><span>        </span>+ <span>"VR0lBBYwFAYIKwYBBQUHAwEGCCsGAQUFBwMCMEkGA1UdIARCMEAwNAYLKwYBBAGyMQ"<br></span><span>        </span>+ <span>"ECAgcwJTAjBggrBgEFBQcCARYXaHR0cHM6Ly9zZWN0aWdvLmNvbS9DUFMwCAYGZ4EM"<br></span><span>        </span>+ <span>"AQIBMIGEBggrBgEFBQcBAQR4MHYwTwYIKwYBBQUHMAKGQ2h0dHA6Ly9jcnQuc2VjdG"<br></span><span>        </span>+ <span>"lnby5jb20vU2VjdGlnb1JTQURvbWFpblZhbGlkYXRpb25TZWN1cmVTZXJ2ZXJDQS5j"<br></span><span>        </span>+ <span>"cnQwIwYIKwYBBQUHMAGGF2h0dHA6Ly9vY3NwLnNlY3RpZ28uY29tMB8GA1UdEQQYMB"<br></span><span>        </span>+ <span>"aCCiouY291bnQubHmCCGNvdW50Lmx5MIIB9AYKKwYBBAHWeQIEAgSCAeQEggHgAd4A"<br></span><span>        </span>+ <span>"dQBGpVXrdfqRIDC1oolp9PN9ESxBdL79SbiFq/L8cP5tRwAAAXJwTJ0kAAAEAwBGME"<br></span><span>        </span>+ <span>"QCIEErTN/aGJ8LV9brGklKeGAXMg1EN/FUxXDu13kNfXhcAiBrKMYe+W4flPyuLNm5"<br></span><span>        </span>+ <span>"jp6FJwtUTZPNpZ+TmM40dRdwjQB0AN+lXqtogk8fbK3uuF9OPlrqzaISpGpejjsSwC"<br></span><span>        </span>+ <span>"BEXCpzAAABcnBMncsAAAQDAEUwQwIfEYSpsSDtKpmj9ZmRWsx73G622N74v09JDjzP"<br></span><span>        </span>+ <span>"bkg9RQIgUelIqSwqu69JanH7losrqTTsjwNv+3QJBNJ6GxJKkh0AdgBvU3asMfAxGd"<br></span><span>        </span>+ <span>"iZAKRRFf93FRwR2QLBACkGjbIImjfZEwAAAXJwTJ0YAAAEAwBHMEUCIQCMBaaQAoua"<br></span><span>        </span>+ <span>"97R+z2zONMUq1XsDP5aoAiutZG4XxuQ6wAIgW1p6XS3az4CCqjwbDKxL9qEnw8fWd+"<br></span><span>        </span>+ <span>"yLx2skviSsTS0AdwApeb7wnjk5IfBWc59jpXflvld9nGAK+PlNXSZcJV3HhAAAAXJw"<br></span><span>        </span>+ <span>"TJ1PAAAEAwBIMEYCIQDg1YFbJPPKDIyrFZJ9rtrUklkh2k/wpgwjDuIp7tPtOgIhAL"<br></span><span>        </span>+ <span>"dZl9s/qISsFm2E64ruYbdE4HKR1ZJ0zbIXOZcds7XXMA0GCSqGSIb3DQEBCwUAA4IB"<br></span><span>        </span>+ <span>"AQB2Ar1h2X/S4qsVlw0gEbXO//6Rj8mTB4BFW6c5r84n0vTwvA78h003eX00y0ymxO"<br></span><span>        </span>+ <span>"i5hkqB8gd1IUSWP1R1ijYtBVPdFi+SsMjUsB5NKquQNlWpo0GlFjRlcXnDC6R6toN2"<br></span><span>        </span>+ <span>"QixJb47VM40Vmn2g0ZuMGfy1XoQKvIyRosT92jGm1YcF+nLEHBDr+89apZ8sUpFfWo"<br></span><span>        </span>+ <span>"AnCom+8sBGwje6zP10eBbprHyzM8snvdwo/QNLAzLcvVNKP+Sr4H7HKzec3g1+THI0"<br></span><span>        </span>+ <span>"M72TzoguJcOZQEI6Pd+FIP5Xad53rq4jCtRGwYrsieH49a3orBnkkJvUKni+mtkxMb"<br></span><span>        </span>+ <span>"PTJ7eeMmX9g/0h"<br></span>};<br><br>CountlyConfig countlyConfig = <span>new </span>CountlyConfig(getApplicationContext(), <span>"c4608d0a021b1cef0f8cb031f51200e9cbe48dd4"</span>, <span>"https://try.count.ly"</span>);<br>countlyConfig.enablePublicKeyPinning(certificates);<br>Countly.<span>sharedInstance</span>().init(countlyConfig);</pre>
 <p>
@@ -1989,8 +2000,21 @@ Countly.sharedInstance().createFeatureGroup("groupName", groupFeatures);</code><
   is wrong.
 </p>
 <p>
-  In case you still have issues, have a look
-  <a href="https://support.count.ly/hc/en-us/articles/9290669873305-A-deeper-look-at-SDK-concepts#h_01HDNJK8PAE5GEQWRFDS4KD6S6" target="_blank" rel="noopener noreferrer">here</a>.
+  In case you encounter some other certificate or SSL related exception,
+  <a href="https://developer.android.com/training/articles/security-ssl" target="_blank" rel="noopener">here </a>is
+  a list of the common reasons for issues.
+</p>
+<p>
+  In case of those issues, sometimes a good way of exploring the cause of the problem
+  further is the same openssl certificate command:
+</p>
+<pre>openssl s_client -connect <span>try</span>.count.ly:<span>443 </span>-showcerts</pre>
+<p>It's error codes can sometimes lead you to a solution.</p>
+<p>
+  A common issue, which can be encountered is that the server's certificate does
+  not contain the full chain of trust in it and it shows only 1 entry. In such
+  cases,&nbsp;<a href="https://serverfault.com/questions/875297/verify-return-code-21-unable-to-verify-the-first-certificate-lets-encrypt-apa" target="_blank" rel="noopener">this</a>&nbsp;may
+  be helpful.
 </p>
 <h2 id="h_01HAVQDM5WB4SK90KZYJE329MK">Using Proguard</h2>
 <p>
@@ -2274,8 +2298,13 @@ Countly.sharedInstance().createFeatureGroup("groupName", groupFeatures);</code><
 <pre><code class="java">Countly.sharedInstance().isInitialized();</code></pre>
 <h2 id="h_01HAVQDM5WX9QJWDJ4GM0CCHTB">Attribution</h2>
 <p>
-  This feature is available for the Enterprise Edition, but currently server side
-  support for this is limited.
+  <a href="https://support.count.ly/hc/en-us/articles/360037639271-Attribution-Analytics">Countly Attribution Analytics</a>
+  allows you to measure your marketing campaign performance by attributing installs
+  from specific campaigns. This feature is available for the Enterprise Edition,
+  but currently server side support for this is limited.
+</p>
+<p>
+  <strong><span style="font-weight: 400;">For more information about how to set up your campaigns, please&nbsp;</span><a href="https://support.count.ly/hc/en-us/articles/360037639271-Attribution-Analytics"><span style="font-weight: 400;">review this documentation</span></a><span style="font-weight: 400;">.</span></strong>
 </p>
 <p>
   <strong><span style="font-weight: 400;">To report install attribution, you would perform the following request:</span></strong>
@@ -2331,7 +2360,7 @@ Countly.sharedInstance().addCustomNetworkRequestHeaders(customHeaderValues);</co
 <pre>//provide custom metric values<br>Map&lt;String, String&gt; metricOverride = new HashMap&lt;&gt;();<br>metricOverride.put("SomeKey", "123");<br>metricOverride.put("_app_version", "custom_version-123");<br><br>setMetricOverride(metricOverride);</pre>
 <p>
   For more information on the specific metric keys used by Countly, check
-  <a href="https://support.count.ly/hc/en-us/articles/9290669873305#h_01HABT18WWYQ2QYPZY3GHZBA9B" target="_self">here</a>.
+  <a href="https://support.count.ly/hc/en-us/articles/9290669873305#setting-custom-user-metrics" target="_self">here</a>.
 </p>
 <h2 id="h_01HAVQDM5W9DMJ3Y6NXNCCVW0J">Log Listener</h2>
 <p>
@@ -2612,6 +2641,9 @@ Countly.sharedInstance().requestQueue().isDeviceAppCrawler();</code></pre>
   Downloading Test Variants section.
 </p>
 <h2 id="h_01HD3ZJYNBDW19BCE6NM12HM7T">Drop Old Requests</h2>
+<div class="callout callout--warning">
+  <p>Available starting from version 23.8.3</p>
+</div>
 <p>
   If you are concerned about your app being used sparsely over a long time frame,
   old requests inside the request queue might not be important. If, for any reason,
@@ -2744,7 +2776,7 @@ Countly.sharedInstance().requestQueue().isDeviceAppCrawler();</code></pre>
       </td>
       <td>
         Module needed for
-        <a href="https://support.count.ly/hc/en-us/articles/360037754031-Android-SDK#h_01HAVQDM5TFKEHBN5G8J9VSP37">Native C++ crash reporting</a>
+        <a href="https://resources.count.ly/docs/countly-sdk-for-android#section-native-c-crash-reporting">Native C++ crash reporting</a>
       </td>
     </tr>
     <tr>
